@startuml Class Diagram - Journey Setup (Use Case 7)
!theme plain

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 15
skinparam ranksep 25
skinparam classFontSize 11

top to bottom direction

' ===== CORE FLOW (vertical stack) =====
package "Presentation" {
  class JourneyController <<controller>> {
    - _journeyService : IJourneyService
    --
    + SetupJourney(request) : JourneySetupResponse
    + GetMyJourneys() : List<JourneyListItemResponse>
    + GetById(id) : JourneyDetailResponse
    + GetSuggestionsAlongRoute(id, limit?, weather?, timeOfDay?) : List<RouteMicroExperienceSuggestionResponse>
  }
}

package "Application" {
  interface IJourneyService <<service>> {
    + ValidateAndCreateJourneyAsync(request, travelerId?, ct?) : Task<JourneySetupResponse?>
    + GetMyJourneysAsync(travelerId?, ct?) : Task<List<JourneyListItemResponse>>
    + GetByIdAsync(id, ct?) : Task<JourneyDetailResponse?>
    + GetSuggestionsAlongRouteAsync(journeyId, limit?, weather?, timeOfDay?, ct?) : Task<List<RouteMicroExperienceSuggestionResponse>>
  }

  class JourneyService <<service>> {
    - _journeyRepository : IJourneyRepository
    - _goongMapsService : IGoongMapsService
    - _microExperienceRepository : IMicroExperienceRepository
    - _weatherService : IWeatherService
    --
    + ValidateAndCreateJourneyAsync(...) : Task<JourneySetupResponse?>
    + GetMyJourneysAsync(...) : Task<List<JourneyListItemResponse>>
    + GetByIdAsync(...) : Task<JourneyDetailResponse?>
    + GetSuggestionsAlongRouteAsync(...) : Task<List<RouteMicroExperienceSuggestionResponse>>
  }

  interface IGoongMapsService <<service>> {
    + AnalyzeRouteContextAsync(origin, dest, vehicleType, timeBudget, detour, ct?) : Task<RouteContext?>
    + GeocodeAddressToPointAsync(address, ct?) : Task<Point?>
  }

  class GoongMapsService <<service>> {
    + AnalyzeRouteContextAsync(...) : Task<RouteContext?>
    + GeocodeAddressToPointAsync(...) : Task<Point?>
  }

  interface IJourneyRepository <<repository>> {
    + SaveAsync(journey, waypoints, ct?) : Task<Journey>
    + GetByIdAsync(id, ct?) : Task<Journey?>
    + GetByTravelerIdAsync(travelerId, ct?) : Task<List<Journey>>
  }

  interface IMicroExperienceRepository <<repository>> {
    + FindSuggestionsAlongRouteAsync(journeyId, limit, weather?, timeOfDay?, ct?) : Task<List<RouteMicroExperienceSuggestionResponse>>
  }

  interface IWeatherService <<service>> {
    + GetCurrentWeatherAsync(lat, lon, ct?) : Task<CurrentWeatherResponse?>
  }
}

package "Infrastructure" {
  class JourneyRepository <<repository>> {
    - _context : AppDbContext
    --
    + SaveAsync(...) : Task<Journey>
    + GetByIdAsync(id, ct?) : Task<Journey?>
    + GetByTravelerIdAsync(travelerId, ct?) : Task<List<Journey>>
  }
}

' ===== DOMAIN =====
package "Domain" {
  class Journey <<entity>> {
    + Id : Guid
    + OriginAddress : string
    + DestinationAddress : string
    + VehicleType : VehicleType
    + TimeBudgetMinutes : int
    + MaxDetourDistanceMeters : int
    + Status : JourneyStatus
  }

  class JourneyWaypoint <<entity>> {
    + Id : Guid
    + StopOrder : int
    + Address : string
  }

  class User <<entity>> {
    + Id : Guid
    + Email : string
    + Role : UserRole
  }
}

' ===== DTOs (simplified - key attributes only) =====
package "DTOs" {
  class JourneySetupRequest <<DTO>> {
    + OriginAddress : string
    + DestinationAddress : string
    + VehicleType : VehicleType
    + CurrentMood : MoodType?
    + TimeBudgetMinutes : int
    + MaxDetourDistanceMeters : int
    + MaxStopCount : int
    + PreferredStopDurationMinutes : int?
  }

  class JourneySetupResponse <<DTO>> {
    + JourneyId : Guid
    + Status : JourneyStatus
    + Summary : string
    + OriginAddress : string?
    + DestinationAddress : string?
  }

  class RouteContext <<DTO>> {
    + RoutePath : LineString?
    + TotalDistanceMeters : int
    + EstimatedDurationMinutes : int
    + OriginLocation : Point?
    + DestinationLocation : Point?
  }

  class JourneyListItemResponse <<DTO>> {
    + Id : Guid
    + OriginAddress : string?
    + DestinationAddress : string?
    + Status : JourneyStatus?
  }

  class JourneyDetailResponse <<DTO>> {
    + Id : Guid
    + TravelerId : Guid?
    + OriginAddress : string?
    + DestinationAddress : string?
    + Status : JourneyStatus?
  }

  class RouteMicroExperienceSuggestionResponse <<DTO>> {
    + Id : Guid
    + Name : string?
    + DetourDistanceMeters : int
    + EstimatedStopMinutes : int
  }
}

' ===== RELATIONSHIPS =====
JourneyController --> IJourneyService
JourneyController ..> JourneySetupRequest
JourneyController ..> JourneySetupResponse
JourneyController ..> JourneyListItemResponse
JourneyController ..> JourneyDetailResponse
JourneyController ..> RouteMicroExperienceSuggestionResponse

JourneyService ..|> IJourneyService
JourneyService --> IJourneyRepository
JourneyService --> IGoongMapsService
JourneyService --> IMicroExperienceRepository
JourneyService --> IWeatherService
JourneyService ..> JourneySetupRequest
JourneyService ..> Journey

GoongMapsService ..|> IGoongMapsService
GoongMapsService ..> RouteContext

JourneyRepository ..|> IJourneyRepository
JourneyRepository --> Journey
JourneyRepository --> JourneyWaypoint

Journey "1" *-- "0..*" JourneyWaypoint : waypoints
Journey "*" --> "1" User : traveler
@enduml
